<resources>
    <string name="app_name">SDosAndroidCars</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="filter">Filter</string>
    <string name="makers">Makers</string>
    <string name="colors">Colors</string>
    <string name="loading">Loading…</string>
    <string name="gallery">Gallery</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="logout">Logout</string>
    <string name="add_new_car">Add new Car</string>
    <string name="error">Error</string>
</resources>
