<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/navigation_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_filter"
            android:title="@string/filter" />
        <item
            android:id="@+id/nav_addCar"
            android:title="@string/add_new_car" />
    </group>

    <group
        android:id="@+id/navigation_group_login"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_signup"
            android:title="@string/signup" />
    </group>

</menu>
